test_regress/t/t_class_param_nconst_bad.out
%Error: t/t_class_param_nconst_bad.v:14:16: Expecting expression to be constant, but can't convert a RAND to constant.
                                          : ... note: In instance 't'
   14 |   Cls #(.PARAM($random)) c;   
      |                ^~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_class_param_nconst_bad.v:14:10: Can't convert defparam value to constant: Param 'PARAM' of 'Cls'
                                          : ... note: In instance 't'
   14 |   Cls #(.PARAM($random)) c;   
      |          ^~~~~
%Error: Exiting due to
